--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
             <em>Flight Manual</em> will be used to actually do something, but,
             unfortunately, that time is not right now.
           </p>
+
+          <p>
+            <strong>Flight Manual</strong> is still being worked on, and nowhere
+            near complete. If you're interested in using it, or following along
+            with its development, you can find the
+            <a href="https://github.com/dkuntz2/flight_manual">source on GitHub</a>.
+          </p>
         </div>
       </section>
 
